SnapKit, Toast 라이브러리 설치 및 탐색창 구현

--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -1441,7 +1441,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="EC3-MD-Ucc" kind="relationship" relationship="rootViewController" id="TaN-PT-ipt"/>
+                        <segue destination="EC3-MD-Ucc" kind="relationship" relationship="rootViewController" id="oHw-TU-dVs"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YxN-pv-EWC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1487,7 +1487,7 @@
                 <viewControllerPlaceholder storyboardIdentifier="SearchViewController" storyboardName="SearchViewController" referencedIdentifier="SearchViewController" id="sbY-fT-my0" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ql-TM-ctB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1835" y="-823"/>
+            <point key="canvasLocation" x="1937" y="-823"/>
         </scene>
         <!--Item-->
         <scene sceneID="wQm-G1-h0g">
